# ChessResultPredictionModel

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  MEMORY.md  README.md  REPORT.md
configs/: large.toml  medium.toml  nano.toml  small.toml  tiny.toml
models/tiny-elite2400-2ep/: README.md  meta.json  model.safetensors  model.toml
scripts/: regen-data.sh
src/: config.rs  data.rs  encoding.rs  fused.rs  lib.rs  metrics.rs  model.rs  runtime.rs
tests/: overfit.rs
