[package]
name = "chess-wdl"
version = "0.1.0"
edition = "2021"
description = "Chessformer/Maia-3-inspired WDL (win/draw/loss) outcome predictor in Rust"
license = "MIT"

[lib]
name = "chess_wdl"
path = "src/lib.rs"

[[bin]]
name = "chess-wdl-prepare"
path = "src/bin/prepare.rs"

[[bin]]
name = "chess-wdl-train"
path = "src/bin/train.rs"

[[bin]]
name = "chess-wdl-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "chess-wdl-predict"
path = "src/bin/predict.rs"

[profile.release]
opt-level = 3
lto = "thin"

[dependencies]
anyhow = "1.0.102"
candle-core = { version = "0.10.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.10.2", features = ["accelerate"] }
clap = { version = "4.6.1", features = ["derive"] }
pgn-reader = "0.29.0"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shakmaty = "0.30.0"
toml = "1.1.2"
