[package]
name = "chess-wdl"
version = "0.1.0"
edition = "2021"
description = "Chessformer/Maia-3-inspired WDL (win/draw/loss) outcome predictor in Rust"
license = "MIT"

[lib]
name = "chess_wdl"
path = "src/lib.rs"

[[bin]]
name = "chess-wdl-prepare"
path = "src/bin/prepare.rs"

[[bin]]
name = "chess-wdl-train"
path = "src/bin/train.rs"

[[bin]]
name = "chess-wdl-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "chess-wdl-predict"
path = "src/bin/predict.rs"

[[bin]]
name = "chess-wdl-replay"
path = "src/bin/replay.rs"

[profile.release]
opt-level = 3
lto = "thin"

# macOS (M1) gets the Metal GPU backend + Accelerate BLAS. On other platforms
# these Apple-only features are omitted, so the crate builds CPU-only.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10.2", features = ["metal", "accelerate"] }
candle-nn = { version = "0.10.2", features = ["accelerate"] }

# Non-macOS (Linux) uses Intel MKL for multi-threaded CPU matmul — candle's
# default gemm is single-threaded and dominates step time (~2.5 s/step for
# nano); MKL cuts that several-fold. Accelerate is macOS-only, so this is the
# CPU BLAS backend everywhere else.
[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.10.2", features = ["mkl"] }
candle-nn = { version = "0.10.2", features = ["mkl"] }

[dependencies]
anyhow = "1.0.102"
# Base (cross-platform, CPU) candle. macOS additionally enables metal +
# accelerate via the target-specific table below; Cargo unions the features,
# so an M1 build still gets the Metal GPU + Accelerate BLAS path unchanged
# while Linux/other targets build CPU-only (no objc2/Metal, no Accelerate).
candle-core = "0.10.2"
candle-nn = "0.10.2"
clap = { version = "4.6.1", features = ["derive"] }
pgn-reader = "0.29.0"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shakmaty = "0.30.0"
toml = "1.1.2"
